--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@ body{
     background-color: black;
     color: white;
     text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 h1{
     color: green;
@@ -27,4 +28,9 @@ a{
 .table{
     margin: 0 auto;
     width: 90%;
+    background: white;
+    color: black;
+    border-radius: 12px;
+    padding-top: 12px;
+    padding-bottom: 12px;
 }
