Actualizar styles.css

--- a/src/styles.css
+++ b/src/styles.css
@@ -31,6 +31,5 @@ a{
     background: white;
     color: black;
     border-radius: 12px;
-    padding-top: 12px;
-    padding-bottom: 12px;
+    padding: 12px;
 }
