--- a/src/styles.css
+++ b/src/styles.css
@@ -33,3 +33,9 @@ a{
     border-radius: 12px;
     padding: 12px;
 }
+
+button{
+  padding: 6px 12px;
+  border-radius: 6px;
+  font-weight: bold;
+}
