--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 body{
-    background-color: white;
-    color: black;
+    background-color: black;
+    color: white;
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
